k8s/c1-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: team7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 192.168.1.129:5000/team7/client:latest
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: team7
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - name: http
    port: 8501
    targetPort: 8501
    nodePort: 30501
